cluster-talos/kubernetes/apps/home-assistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: home-assistant
subsets:
  - addresses:
      - ip: 172.16.10.205
    ports:
      - port: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ports:
    - port: 8123
      targetPort: 8123
